Adapted ucr templates (Bug #35266)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52969 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/desktop/univention-kde/conffiles/usr/share/apps/kdesktop/DesktopLinks/konqbrowser.desktop
+++ b/desktop/univention-kde/conffiles/usr/share/apps/kdesktop/DesktopLinks/konqbrowser.desktop
@@ -2,52 +2,191 @@
 Type=Application
 Exec=kfmclient openProfile webbrowsing
 Icon=konqueror
-DocPath=konqueror/index.html
+X-DocPath=konqueror/index.html
 
-Name=Konqueror Web Browser
-Name[az]=Konqueror Veb SÃÂyyahÃÂ±
-Name[bg]=WWW-ÃÂ±ÃÂÃÅžÃÂÃÂ·ÃÂµÃÂ Konqueror
-Name[br]=Furcher Gwiad Konqueror
-Name[bs]=Konqueror web preglednik
-Name[ca]=Fullejador Web Konqueror
-Name[cs]=InternetovÃÅ prohlÃÂ­ÃÅžeÃÂ Konqueror
-Name[da]=Konqueror netsÃÅŸger
-Name[de]=Web-Browser Konqueror
-Name[el]=ÃÅ ÃÂÃÂ»ÃÂ»ÃÂ¿ÃÅÃÂµÃÂÃÂÃÂ·ÃÂÃÂ®ÃÂ Konqueror
-Name[eo]=Tuttera TeksaÃÂµo
-Name[es]=Navegador Web Konqueror
-Name[et]=Veebibrauser Konqueror
-Name[eu]=Konqueror Web Nabigatzailea
-Name[fi]=Konqueror WWW-selain
-Name[fr]=Navigateur web Konqueror
-Name[gl]=Navegador Web Konqueror
-Name[he]=Konqueror ÃÂªÃÂ©ÃÅ¡ÃÂ ÃÂÃâ¬ÃÂÃâ¬ÃÂ
-Name[hr]=Konqueror web preglednik
-Name[hu]=Konqueror internetbÃÂ¶ngÃÂ©szÃÂ
-Name[is]=Konqueror vefsjÃÂ¡in
+Name=Konqueror
+Name[af]=Konqueror
+Name[ar]=كونكيورر
+Name[as]=Konqueror
+Name[ast]=Konqueror
+Name[be]=Konqueror
+Name[be@latin]=Konqueror
+Name[bg]=Konqueror
+Name[bn]=কনকরার
+Name[bn_IN]=Konqueror
+Name[br]=Konqueror
+Name[bs]=K‑osvajač
+Name[ca]=Konqueror
+Name[ca@valencia]=Konqueror
+Name[cs]=Konqueror
+Name[csb]=Konqueror
+Name[cy]=Konqueror
+Name[da]=Konqueror
+Name[de]=Konqueror
+Name[el]=Konqueror
+Name[en_GB]=Konqueror
+Name[eo]=Konkeranto
+Name[es]=Konqueror
+Name[et]=Konqueror
+Name[eu]=Konqueror
+Name[fi]=Konqueror
+Name[fr]=Konqueror
+Name[fy]=Konqueror
+Name[ga]=Konqueror
+Name[gl]=Konqueror
+Name[gu]=કોન્કરર
+Name[he]=Konqueror
+Name[hi]=कॉन्करर
+Name[hne]=कान्करर
+Name[hr]=Konqueror
+Name[hsb]=Konqueror
+Name[hu]=Konqueror
+Name[ia]=Konqueror
+Name[id]=Konqueror
+Name[is]=Konqueror
 Name[it]=Konqueror
-Name[ja]=Konqueror Ã£ÂÅ Ã£ÂÂ§Ã£ÂÂÃ£ÂÂÃ£ÂÂ©Ã£ÂÅ Ã£ÂÂ¶
-Name[ko]=Ã¬Â»Â¹Ã¬Â»â¬Ã«ÂÂ¬ Ã¬ÂÂ¹ Ã­ÂÂÃ¬ÂÂÃªÅŸÂ°
-Name[lt]=Konqueror Web narÃÂ¡yklÃÂ
-Name[lv]=IekarotÃÂjs Web PÃÂrlÃÂ«ks
-Name[mk]=ÃÂ ÃÂ°ÃÂ·ÃÂ³ÃÂ»ÃÂµÃÅœÃÂÃÂ²ÃÂ°ÃÂÃÅžÃÂ Konqueror
-Name[mt]=Web Browser Konqueror
-Name[nl]=Konqueror Webbrowser
-Name[no]=Konqueror nettleser
-Name[no_NY]=Nettlesaren Konqueror
-Name[oc]=Navigador Web Konqueror
-Name[pl]=PrzeglÃÂdarka Konqueror
-Name[pt_BR]=Navegador Web
-Name[pt]=Navegador Konqueror
-Name[ru]=WWW-ÃÂ±ÃÂÃÅžÃÂÃÂ·ÃÂµÃÂ Konqueror
-Name[sk]=Web PriehliadaÃÂ Konqueror
-Name[sl]=Brskalnik Konqueror
-Name[sr]=Konqueror Web ÃÂitaÃÂ
-Name[sv]=WebblÃâ¬saren Konqueror
-Name[ta]=ÃÅŸÃÂ¡ÃÅÃÅ ÃÅŸÃÂ¡ÃÂÃÂ· ÃÂÃÅ¡ÃÂ ÃÂ¯ÃÂÃÂ¡ÃÂÃÂ¢
-Name[th]=Ã Â¹ÂÃ ÅŸÂ§Ã ÅŸÂÃ ÅŸÂÃ ÅŸÂ£Ã ÅŸÂ²Ã ÅŸÂ§Ã Â¹ÂÃ ÅŸÂÃ ÅŸÂ­Ã ÅŸÂ£Ã Â¹Â Konqueror
-Name[tr]=Konqueror Web TarayÃÂ±cÃÂ±
-Name[uk]=ÃÂÃÂµÃÂÃÂµÃÂ³ÃÂ»ÃÂÃÅœÃÂ°ÃÂ ÃÂ¢ÃÂµÃÅÃÂµÃÂ 'Konqueror'
-Name[vi]=TrÃÂ¬nh duyÃ¡Â»Ât web Konqueror 
-Name[xh]=Umkhangeli zincwadi we Konqueror Web
-Name[zh_CN.GB2312]=Konqueror Web ÃŠÂµÂÃšÂ§ÂÃ¥ÂÅ¡
+Name[ja]=Konqueror
+Name[ka]=Konqueror
+Name[kk]=Konqueror
+Name[km]=Konqueror
+Name[kn]=ಕಾಂಕರರ್
+Name[ko]=Konqueror
+Name[ku]=Konqueror
+Name[lt]=Konqueror
+Name[lv]=Konqueror
+Name[mai]=कोन्करर
+Name[mk]=Konqueror
+Name[ml]=കോണ്‍ക്വറര്‍
+Name[mr]=कॉन्करर
+Name[ms]=Konqueror
+Name[nb]=Konqueror
+Name[nds]=Konqueror
+Name[ne]=कन्क्वेरर
+Name[nl]=Konqueror
+Name[nn]=Konqueror
+Name[oc]=Konqueror
+Name[or]=Konqueror
+Name[pa]=ਕੋਨਕਿਉਰੋਰ
+Name[pl]=Konqueror
+Name[pt]=Konqueror
+Name[pt_BR]=Konqueror
+Name[ro]=Konqueror
+Name[ru]=Konqueror
+Name[se]=Konqueror
+Name[si]=Konqueror
+Name[sk]=Konqueror
+Name[sl]=Konqueror
+Name[sr]=К‑освајач
+Name[sr@ijekavian]=К‑освајач
+Name[sr@ijekavianlatin]=K‑osvajač
+Name[sr@latin]=K‑osvajač
+Name[sv]=Konqueror
+Name[ta]=கான்கொயரர்
+Name[te]=కాంకెరర్
+Name[tg]=Konqueror
+Name[th]=Konqueror
+Name[tr]=Konqueror
+Name[ug]=Konqueror
+Name[uk]=Konqueror
+Name[uz]=Konqueror
+Name[uz@cyrillic]=Konqueror
+Name[vi]=Konqueror
+Name[wa]=Konqueror
+Name[xh]=Konqueror
+Name[x-test]=xxKonquerorxx
+Name[zh_CN]=Konqueror
+Name[zh_TW]=Konqueror
+GenericName=Web Browser
+GenericName[af]=Webblaaier
+GenericName[ar]=متصفح الوِب
+GenericName[as]=ৱেব চৰক
+GenericName[ast]=Restolador web
+GenericName[be]=Вандроўнік па Сеціве
+GenericName[be@latin]=Hartač sieciva
+GenericName[bg]=Уеб браузър
+GenericName[bn]=ওয়েব ব্রাউজার
+GenericName[bn_IN]=ওয়েব ব্রাউজার
+GenericName[br]=Furcher ar Gwiad
+GenericName[bs]=Veb pregledač
+GenericName[ca]=Navegador web
+GenericName[ca@valencia]=Navegador web
+GenericName[cs]=WWW prohlížeč
+GenericName[csb]=Przezérnik WWW
+GenericName[cy]=Porydd Gwe
+GenericName[da]=Browser
+GenericName[de]=Webbrowser
+GenericName[el]=Περιηγητής ιστού
+GenericName[en_GB]=Web Browser
+GenericName[eo]=TTT-foliumilo
+GenericName[es]=Navegador web
+GenericName[et]=Veebibrauser
+GenericName[eu]=Web arakatzailea
+GenericName[fa]=مرورگر وب‌
+GenericName[fi]=WWW-selain
+GenericName[fr]=Navigateur Web
+GenericName[fy]=Webblêder
+GenericName[ga]=Brabhsálaí Gréasáin
+GenericName[gl]=Navegador Web
+GenericName[gu]=વેબ બ્રાઉઝર
+GenericName[he]=דפדפן אינטרנט
+GenericName[hi]=वेब ब्राउज़र
+GenericName[hne]=वेब ब्राउजर
+GenericName[hr]=Web preglednik
+GenericName[hsb]=Web Browser
+GenericName[hu]=Webböngésző
+GenericName[ia]=Navigator Web
+GenericName[id]=Peramban Web
+GenericName[is]=Vafri
+GenericName[it]=Browser Web
+GenericName[ja]=ウェブブラウザ
+GenericName[ka]=ვებ–ბრაუზერი
+GenericName[kk]=Веб браузер
+GenericName[km]=កម្មវិធី​រុករក​បណ្ដាញ
+GenericName[kn]=ಜಾಲ ವೀಕ್ಷಕ
+GenericName[ko]=웹 브라우저
+GenericName[ku]=Geroka Torê
+GenericName[lt]=Žiniatinklio naršyklė
+GenericName[lv]=Tīmekļa pārlūks
+GenericName[mai]=वेब ब्राउजर
+GenericName[mk]=Прелистувач на Интернет
+GenericName[ml]=വെബ് ബ്രൌസര്‍
+GenericName[mr]=वेब ब्राऊजर
+GenericName[ms]=Pelayar Web
+GenericName[nb]=Nettleser
+GenericName[nds]=Nettkieker
+GenericName[ne]=वेब ब्राउजर
+GenericName[nl]=Webbrowser
+GenericName[nn]=Nettlesar
+GenericName[oc]=Navigador web
+GenericName[or]=ୱେବ ବ୍ରାଉଜର
+GenericName[pa]=ਵੈੱਬ ਬਰਾਊਜ਼ਰ
+GenericName[pl]=Przeglądarka WWW
+GenericName[pt]=Navegador Web
+GenericName[pt_BR]=Navegador Web
+GenericName[ro]=Navigator de Internet
+GenericName[ru]=Веб-браузер
+GenericName[se]=Fierpmádatlogan
+GenericName[si]=ජාල ගවේශකය
+GenericName[sk]=Webový prehliadač
+GenericName[sl]=Spletni brskalnik
+GenericName[sr]=Веб прегледач
+GenericName[sr@ijekavian]=Веб прегледач
+GenericName[sr@ijekavianlatin]=Veb pregledač
+GenericName[sr@latin]=Veb pregledač
+GenericName[sv]=Webbläsare
+GenericName[ta]=இணைய உலாவி
+GenericName[te]=వెబ్ బ్రౌజర్
+GenericName[tg]=Браузери Интернет
+GenericName[th]=เว็บเบราว์เซอร์
+GenericName[tr]=Web Tarayıcı
+GenericName[ug]=توركۆرگۈ
+GenericName[uk]=Переглядач інтернету
+GenericName[uz]=Veb-brauzer
+GenericName[uz@cyrillic]=Веб-браузер
+GenericName[vi]=Trình duyệt mạng
+GenericName[wa]=Betchteu waibe
+GenericName[xh]=Umkhangeli zincwadi we Web
+GenericName[x-test]=xxWeb Browserxx
+GenericName[zh_CN]=网页浏览器
+GenericName[zh_TW]=網頁瀏覽器
+Categories=Qt;KDE;Network;WebBrowser;
