--- a/test/ucs-test/debian/rules
+++ b/test/ucs-test/debian/rules
@@ -35,8 +35,8 @@ export DH_ALWAYS_EXCLUDE=.svn
 %:
 	dh $@ --with python_support
 
-#override_dh_install:
-#	dh_install --sourcedir=$(CURDIR)
+override_dh_install:
+	dh_install --sourcedir=$(CURDIR)
 
 override_dh_auto_test:
 	ucslint
