univention-mail-cyrus (7.0.0-1) unstable; urgency=medium
  * Update to UCS 4.0 (Bug #35264)

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52980 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/mail/univention-mail-cyrus/conffiles/etc/imapd/imapd.conf
+++ b/mail/univention-mail-cyrus/conffiles/etc/imapd/imapd.conf
@@ -6,6 +6,8 @@ if serverName:
 	print 'servername: %s' % serverName
 @!@
 configdirectory: /var/lib/cyrus
+proc_path: /run/cyrus/proc
+mboxname_lockpath: /run/cyrus/lock
 defaultpartition: default
 partition-default: /var/spool/cyrus/mail
 partition-news: /var/spool/cyrus/news
@@ -118,6 +120,7 @@ notifysocket: /var/run/cyrus/socket/notify
 if baseConfig.get("mail/cyrus/mailnotifier"):
 	print "mailnotifier: %s" % baseConfig["mail/cyrus/mailnotifier"]
 @!@
+syslog_prefix: cyrus
 
 @!@
 mail_cyrus_murder_master = baseConfig.get('mail/cyrus/murder/master')
