Bug #35659 server: Install recommended packages again
Add recommended packages to server role package too, since
univention-base-packages is already installed during debootstrap, where
recommended packages are not installed.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52986 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-server/debian/control
+++ b/base/univention-server/debian/control
@@ -149,6 +149,17 @@ Depends: ${misc:Depends},
  univention-pkgdb-tools,
  shell-univention-lib (>= 1.0.25-1),
  python-univention-lib (>= 1.0.25-1)
+Recommends: vim,
+ emacs23,
+ less,
+ elinks,
+ wget,
+ nmap,
+ zip,
+ unzip,
+ eject,
+ locate,
+ univention-network-common,
 Description: UCS system role common dependencies and files
  This package contains common files used by all system roles.
  .
