* Added amd64 firefox binary (Bug #35266)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53017 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/desktop/firefox-de/debian/control
+++ b/desktop/firefox-de/debian/control
@@ -7,7 +7,10 @@ Build-Depends: debhelper, bzip2, unzip, ucslint-univention
 
 Package: firefox-de
 Architecture: i386 amd64
-Depends: libstdc++6, ia32-libs [amd64], ia32-libs-gtk [amd64], ttf-dejavu | ttf-dustin, libasound2, libdbus-glib-1-dev, libgconf2-4
+Depends: libstdc++6, ttf-dejavu | ttf-dustin, libasound2, libdbus-glib-1-dev, libgconf2-4,
+ libxrender1,
+ libgtk2.0-0,
+ libxt6,
 Conflicts: mozilla-firefox, iceweasel, firefox-en
 Breaks: firefox (<< 1:10)
 Provides: www-browser
