* Use firefox instead of iceweasel by default (Bug #35266)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53018 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/control
+++ b/base/univention-system-setup/debian/control
@@ -61,7 +61,7 @@ Depends: ${misc:Depends},
  x11-utils,
  x11-xkb-utils,
  openbox,
-Recommends: iceweasel | firefox-en | firefox-de | firefox,
+Recommends: firefox-en | firefox-de | firefox | iceweasel,
  xinit,
 Replaces: univention-setup-boot, univention-system-setup-appliance
 Description: Starting univention-system-setup on next boot
