Bug #35371 DVD: Change ISO volume ID to use UCS
Disable volume ID auto-generation by setting a fixed base volume ID.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53029 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-dvd/ucs400.conf
+++ b/base/univention-dvd/ucs400.conf
@@ -87,6 +87,9 @@ export DEBVERSION=4.0-0
 #export OFFICIAL="Official Beta"
 export OFFICIAL='Official Release'
 
+# Used by tools/start_new_disc for naming ISO volumes
+export VOLID_BASE="UCS $DEBVERSION"
+
 # ... for arch
 if [ -z "$ARCHES" ]; then
 	CPU=`dpkg-architecture -qDEB_HOST_ARCH_CPU 2>/dev/null || true`
