* Update to UCR templates to new upstream versions (Bug #35138)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53042 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-base-files/conffiles/etc/rsyslog.conf
+++ b/base/univention-base-files/conffiles/etc/rsyslog.conf
@@ -10,7 +10,7 @@
 #################
 
 $ModLoad imuxsock # provides support for local system logging
-$ModLoad imklog   # provides kernel logging support (previously done by rklogd)
+$ModLoad imklog   # provides kernel logging support
 #$ModLoad immark  # provides --MARK-- message capability
 
 # provides UDP syslog reception
@@ -40,6 +40,11 @@ $FileGroup adm
 $FileCreateMode 0640
 $DirCreateMode 0755
 $Umask 0022
+
+#
+# Where to place spool and state files
+#
+$WorkDirectory /var/spool/rsyslog
 
 #
 # Include all config files in /etc/rsyslog.d/
@@ -97,7 +102,7 @@ news.notice			-/var/log/news/news.notice
 #
 # Emergencies are sent to everybody logged in.
 #
-*.emerg				*
+*.emerg				:omusrmsg:*
 
 #
 # I like to have messages displayed on the console, but only on a virtual
