--- a/base/univention-system-setup/debian/control
+++ b/base/univention-system-setup/debian/control
@@ -3,7 +3,7 @@ Section: univention
 Priority: optional
 Maintainer: Univention GmbH <packages@univention.de>
 Standards-Version: 3.8.2
-Build-Depends: debhelper (>= 7.0.50~),
+Build-Depends: debhelper (>= 9),
  ucslint-univention,
  python-support,
  python-all,
@@ -16,7 +16,8 @@ Build-Depends: debhelper (>= 7.0.50~),
  python-univention-management-console,
  python-imaging,
  python-simplejson,
- unzip
+ unzip,
+ po-debconf (>= 0.5.0),
 XS-Python-Version: 2.6, 2.7
 
 Package: univention-system-setup
@@ -72,6 +73,20 @@ Description: Starting univention-system-setup on next boot
  integrated, directory driven solution for managing
  corporate environments. For more information about UCS,
  refer to: http://www.univention.de/
+
+Package: di-univention-system-setup
+Architecture: all
+XB-Subarchitecture: ${subarch}
+Provides: configured-ucs
+Depends: cdebconf-udeb,
+ kernel-installer,
+ di-utils,
+ installed-base,
+ created-fstab,
+ bootable-system,
+XB-Installer-Menu-Item: 7650
+Package-Type: udeb
+Description: Start Univention System Setup
 
 Package: univention-management-console-module-setup
 Architecture: all
