Bug #35378 USS: Merge di-univention-system-setup package
Add missing depends on subst-var ${misc:Depends}

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53056 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/control
+++ b/base/univention-system-setup/debian/control
@@ -84,6 +84,7 @@ Depends: cdebconf-udeb,
  installed-base,
  created-fstab,
  bootable-system,
+ ${misc:Depends},
 XB-Installer-Menu-Item: 7650
 Package-Type: udeb
 Description: Start Univention System Setup
