Bug #35378 USS: Merge di-univention-system-setup package
Move package to section debian-installer, which is needed to trigger
build-cd-ucs4 to generate separate Packages files.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53057 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/control
+++ b/base/univention-system-setup/debian/control
@@ -76,6 +76,7 @@ Description: Starting univention-system-setup on next boot
 
 Package: di-univention-system-setup
 Architecture: all
+Section: debian-installer
 XB-Subarchitecture: ${subarch}
 Provides: configured-ucs
 Depends: cdebconf-udeb,
