* Switch from gdm to kdm (Bug #35266) * Use startkde as default session (Bug #35266)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53058 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/desktop/univention-kde/debian/control
+++ b/desktop/univention-kde/debian/control
@@ -11,7 +11,7 @@ Package: univention-kde
 Architecture: all
 Recommends: kde-l10n-de,
  okular,
- univention-gdm,
+ kdm,
  univention-mozilla-firefox,
  univention-x-core
 Depends: ${misc:Depends},
