moved hosteddomains.py to u-m-postfix (Bug #35232)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53082 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/mail/univention-mail-postfix/debian/control
+++ b/mail/univention-mail-postfix/debian/control
@@ -22,8 +22,8 @@ Conflicts: univention-mail,
  exim4-base,
  exim4-config,
  univention-mail-postfix-kolab2
-Replaces: univention-mail-postfix-forward (<< 6.0)
-Breaks: univention-mail-postfix-forward (<< 6.0)
+Replaces: univention-mail-postfix-forward (<< 6.0), univention-mail-server (<< 8.0.12-1)
+Breaks: univention-mail-postfix-forward (<< 6.0), univention-mail-server (<< 8.0.12-1)
 Description: UCS - postfix configuration
  This package contains a basic configuration for the postfix
  mail transport agent.
