Quick fix for the failed reboot (Bug #35733)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53110 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-090-master-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-090-master-s3.cfg
@@ -47,14 +47,16 @@ command2:
 # Upgrade to UCS 4.0
  . utils.sh; upgrade_to_testing
 # . utils.sh; upgrade_to_latest_test_errata
+# remove cd-rom from sources.list
  echo >/etc/apt/sources.list
  . utils.sh; run_setup_join
 command3:
  univention-license-import /root/autotest090.ldif
  . utils.sh; install_ucs_test
- reboot
- LOCAL sleep 60
- . utils.sh; wait_for_reboot
+ # reboot failed (Bug 35733)
+ # reboot
+ #LOCAL sleep 60
+ #. utils.sh; wait_for_reboot
 command4:
  . utils.sh; run_tests
  LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master090_IP]:ucs-test.log .
