--- a/test/ucs-ec2-tools/examples/jenkins/autotest-091-master-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-091-master-s4.cfg
@@ -52,9 +52,10 @@ command2:
 command3:
  univention-license-import /root/autotest091.ldif
  . utils.sh; install_ucs_test
- reboot
- LOCAL sleep 60
- . utils.sh; wait_for_reboot
+ # reboot failed (Bug 35733)
+ # reboot
+ #LOCAL sleep 60
+ #. utils.sh; wait_for_reboot
 command4:
  . utils.sh; run_tests
  LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master091_IP]:ucs-test.log .
