--- a/test/ucs-ec2-tools/examples/jenkins/autotest-093-backup-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-093-backup-s4.cfg
@@ -53,9 +53,10 @@ command2:
 command3:
  univention-license-import /root/autotest093.ldif
 command4:
- reboot
- LOCAL sleep 60
- . utils.sh; wait_for_reboot
+ # reboot failed (Bug 35733)
+ # reboot
+ #LOCAL sleep 60
+ #. utils.sh; wait_for_reboot
 command5:
  # None
 command6:
@@ -88,9 +89,10 @@ command3:
  ucr set samba/debug/level=4
 command4:
  . utils.sh; install_ucs_test
- reboot
- LOCAL sleep 60
- . utils.sh; wait_for_reboot
+ # reboot failed (Bug 35733)
+ # reboot
+ #LOCAL sleep 60
+ #. utils.sh; wait_for_reboot
 command5:
  . utils.sh; run_tests
  LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[backup093_IP]:ucs-test.log .
