--- a/test/ucs-ec2-tools/examples/jenkins/autotest-097-member-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-097-member-s4.cfg
@@ -52,9 +52,10 @@ command2:
 command3:
  univention-license-import /root/autotest097.ldif
 command4:
- reboot
- LOCAL sleep 60
- . utils.sh; wait_for_reboot
+ # reboot failed (Bug 35733)
+ # reboot
+ #LOCAL sleep 60
+ #. utils.sh; wait_for_reboot
 command5:
  # None
 command6:
@@ -86,9 +87,10 @@ command3:
  . utils.sh; run_setup_join_on_non_master
 command4:
  . utils.sh; install_ucs_test
- reboot
- LOCAL sleep 60
- . utils.sh; wait_for_reboot
+ # reboot failed (Bug 35733)
+ # reboot
+ #LOCAL sleep 60
+ #. utils.sh; wait_for_reboot
 command5:
  . utils.sh; run_tests
  LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[member097_IP]:ucs-test.log .
