cleanup the sources.list for a roles (Bug #35148)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53111 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-092-backup-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-092-backup-s3.cfg
@@ -43,11 +43,12 @@ profile:
  server/role="domaincontroller_master"
 command1:
  . utils.sh; basic_setup
+# remove cdrom (Bug 35148)
+ echo >/etc/apt/sources.list
 command2:
 # Upgrade to UCS 4.0
  . utils.sh; upgrade_to_testing
-# utils.sh upgrade_to_latest_test_errata
- echo >/etc/apt/sources.list
+#. utils.sh upgrade_to_latest_test_errata
  . utils.sh; run_setup_join
 command3:
  univention-license-import /root/autotest092.ldif
@@ -79,10 +80,12 @@ profile:
  nameserver=[master092_IP]
 command1:
  . utils.sh; basic_setup
+# remove cdrom (Bug 35148)
+ echo >/etc/apt/sources.list
 command2:
 # Upgrade to UCS 4.0
  . utils.sh; upgrade_to_testing
-# . utils.sh; upgrade_to_latest_test_errata
+#. utils.sh; upgrade_to_latest_test_errata
 command3:
  . utils.sh; run_setup_join_on_non_master
 command4:
