--- a/test/ucs-ec2-tools/examples/jenkins/autotest-096-member-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-096-member-s3.cfg
@@ -43,11 +43,12 @@ profile:
  server/role="domaincontroller_master"
 command1:
  . utils.sh; basic_setup
+# remove cdrom (Bug 35148)
+ echo >/etc/apt/sources.list
 command2:
 # Upgrade to UCS 4.0
  . utils.sh; upgrade_to_testing
 # . utils.sh; upgrade_to_latest_test_errata
- echo >/etc/apt/sources.list
  . utils.sh; run_setup_join
 command3:
  univention-license-import /root/autotest096.ldif
@@ -79,6 +80,8 @@ profile:
  nameserver=[master096_IP]
 command1:
  . utils.sh; basic_setup
+# remove cdrom (Bug 35148)
+ echo >/etc/apt/sources.list
 command2:
 # Upgrade to UCS 4.0
  . utils.sh; upgrade_to_testing
