--- a/test/ucs-ec2-tools/examples/jenkins/autotest-095-slave-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-095-slave-s4.cfg
@@ -43,11 +43,12 @@ profile:
  server/role="domaincontroller_master"
 command1:
  . utils.sh; basic_setup
+# remove cdrom (Bug 35148)
+ echo >/etc/apt/sources.list
 command2:
 # Upgrade to UCS 4.0
  . utils.sh; upgrade_to_testing
 # . utils.sh; upgrade_to_latest_test_errata
- echo >/etc/apt/sources.list
  . utils.sh; run_setup_join
  ucr set samba/debug/level=4
 command3:
@@ -80,6 +81,8 @@ profile:
  nameserver=[master095_IP]
 command1:
  . utils.sh; basic_setup
+# remove cdrom (Bug 35148)
+ echo >/etc/apt/sources.list
 command2:
 # Upgrade to UCS 4.0
  . utils.sh; upgrade_to_testing
