Added cleanup and server role (Bug #35148)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53112 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-100-app-master-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-100-app-master-s3.cfg
@@ -40,8 +40,11 @@ profile:
  locale/default="de_DE.UTF-8:UTF-8"
  packages_install="univention-samba univention-dhcp univention-printserver cups univention-squid univention-bacula univention-nagios-server univention-pkgdb"
  packages_remove=""
+ server/role="domaincontroller_master"
 command1:
  . utils.sh; basic_setup
+# remove cdrom (Bug 35148)
+ echo >/etc/apt/sources.list
 command2:
 # Upgrade to UCS 4.0
  . utils.sh; upgrade_to_testing
