--- a/test/ucs-ec2-tools/examples/jenkins/autotest-071-update-3.2-to-4.0-master-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-071-update-3.2-to-4.0-master-s4.cfg
@@ -40,6 +40,7 @@ profile:
  locale/default="de_DE.UTF-8:UTF-8"
  packages_install="univention-s4-connector univention-samba4 univention-mail-server univention-horde4 univention-dhcp univention-printserver cups univention-squid univention-bacula univention-nagios-server univention-pkgdb"
  packages_remove=""
+ server/role="domaincontroller_master"
 command1:
  . utils.sh; basic_setup
 command2:
