--- a/doc/errata/staging/2014-08-28-univention-system-setup.yaml
+++ b/doc/errata/staging/2014-08-28-univention-system-setup.yaml
@@ -2,10 +2,14 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-3
 src: univention-system-setup
-fix: 7.0.69-52.655.201408280855
+fix: 7.0.69-54.657.201408281722
 version: [3]
 desc: |
-  This update fixes the following issue:
-  * fix suggestion of FQDN build from value entered
+  This update fixes the following issues:
+  * Fix suggestion of FQDN build from value entered
     in the organization field in appliance mode
-bug: [35587]
+  * Moved setup of apache startsite on EC2 to an earlier
+    stage in the boot process
+  * Do not show Firefox data submission policy popup during
+    system setup
+bug: [35587,35721.35605]
