* Remove winbind4 from dependency list (Bug #35319)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53142 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-squid/debian/control
+++ b/services/univention-squid/debian/control
@@ -12,7 +12,7 @@ Depends: ${misc:Depends},
  univention-directory-manager-tools (>> 7.0.147),
  squid3,
  univention-config (>= 8.0.2),
- winbind | winbind4,
+ winbind,
  univention-heimdal-common (>>5.0.24-1),
  python-ipaddr,
  python-crypto
