--- a/doc/errata/staging/2014-09-01-univention-updater.yaml
+++ b/doc/errata/staging/2014-09-01-univention-updater.yaml
@@ -2,9 +2,10 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-3
 src: univention-updater
-fix: 9.0.42-3.1270.201409010740
+fix: 9.0.42-4.1271.201409010749
 version: [2,3]
 desc: |
- The HTTP HEAD query of the updater now also transfers the component
- installation status.
-bug: [35645]
+ * The HTTP HEAD query of the updater now also transfers the component
+   installation status.
+ * The updater package is now limited to Python 2.6.
+bug: [35645,34781]
