* Add python-libcloud dependency (Bug #32842)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53191 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-daemon/debian/control
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/control
@@ -37,7 +37,8 @@ Depends: ${misc:Depends}, ${python:Depends},
  python-libvirt (>= 0.9.12),
  python-openssl,
  python-pam,
- python-univention-directory-manager (>> 6.0.103)
+ python-univention-directory-manager (>> 6.0.103),
+ python-libcloud
 Provides: ${python:Provides}
 Description: UCS Virtual Machine Manager Daemon - Python bindings
  This package contains the UCS Virtual Machine Manager Daemon
