--- a/doc/errata/staging/2014-08-28-univention-config-registry.yaml
+++ b/doc/errata/staging/2014-08-28-univention-config-registry.yaml
@@ -2,10 +2,12 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-3
 src: univention-config-registry
-fix: 9.0.6-10.472.201408281610
+fix: 9.0.6-12.475.201409011603
 version: [2,3]
 desc: |
   This update fixes the following issue:
   * Skip writing of internal cache during configHandlers.load()
     if the process has no write permission.
-bug: [35368]
+  * univention-check-templates has been fixed to correctly handle
+    conffiles with spaces.
+bug: [35368,35202]
