--- a/services/univention-samba/debian/control
+++ b/services/univention-samba/debian/control
@@ -27,8 +27,7 @@ Depends: ${misc:Depends},
  samba-common-bin,
  shell-univention-lib (>= 3.0.26-25),
  python-univention-lib (>= 3.0.26-45)
-Conflicts: samba-ad-dc,
- samba-dsdb-modules
+Conflicts: samba-ad-dc
 Description: UCS - Samba domain controller
  This package contains the configuration for the Samba
  domain controller. It provides authentication, file and
