--- a/services/univention-samba/debian/rules
+++ b/services/univention-samba/debian/rules
@@ -30,9 +30,9 @@
 # /usr/share/common-licenses/AGPL-3; if not, see
 # <http://www.gnu.org/licenses/>.
 
-override_dh_pysupport:
-	dh_pysupport
+override_dh_auto_install:
 	univention-install-config-registry
+	dh_auto_install 
 
 override_dh_fixperms:
 	chmod 755 debian/univention-samba/usr/share/univention-samba/kerberize_user
