--- a/doc/errata/staging/2014-08-28-univention-lib.yaml
+++ b/doc/errata/staging/2014-08-28-univention-lib.yaml
@@ -2,9 +2,10 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-3
 src: univention-lib
-fix: 3.0.26-64.273.201408281503
+fix: 3.0.26-65.274.201409020848
 version: [3,2]
 desc: |
-  This update fixes a problem with reading progress report lines from 'dpkg'
-  while installing Apps, which lead to the installation getting stuck.
-bug: [35729]
+  * This update fixes a problem with reading progress report lines from 'dpkg'
+    while installing Apps, which lead to the installation getting stuck.
+  * The AD member setup does now ignore the spelling of the domain name.
+bug: [35729,35757]
