* Using check_raid from nagios-plugins-contrib * instead of check_linux_raid (Bug #35265)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53224 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/nagios/univention-nagios-raid/conffiles/etc/nagios-plugins/config/univention-raid.cfg
+++ b/nagios/univention-nagios-raid/conffiles/etc/nagios-plugins/config/univention-raid.cfg
@@ -1,5 +1,5 @@
 @%@UCRWARNING=# @%@
 define command {
-	command_name check_linux_raid
-	command_line /usr/lib/nagios/plugins/check_linux_raid
+	command_name check_raid
+	command_line /usr/lib/nagios/plugins/check_raid
 }
