--- a/nagios/univention-nagios-raid/debian/control
+++ b/nagios/univention-nagios-raid/debian/control
@@ -12,7 +12,8 @@ Architecture: all
 Depends: ${misc:Depends},
  univention-nagios-client,
  univention-directory-manager-tools (>> 7.0.147),
- mdadm
+ mdadm,
+ nagios-plugins-contrib
 Description: nagios raid plugin
  This package installs a nagios plugin to monitor software
  RAID status.
