fixed XS-Python-Version (Bug #35138)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53232 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-firewall/debian/control
+++ b/base/univention-firewall/debian/control
@@ -3,7 +3,7 @@ Section: univention
 Priority: optional
 Maintainer: Univention GmbH <packages@univention.de>
 Standards-Version: 3.5.5
-XS-Python-Version: 2.6
+XS-Python-Version: 2.6, 2.7
 Build-Depends: debhelper,
  python-all,
  python-support,
