--- a/base/univention-policy/debian/control
+++ b/base/univention-policy/debian/control
@@ -3,6 +3,7 @@ Section: univention
 Priority: optional
 Maintainer: Univention GmbH <packages@univention.de>
 Standards-Version: 3.5.5
+XS-Python-Version: 2.6, 2.7
 Build-Depends: debhelper,
  libldap2-dev,
  libsasl2-dev,
