--- a/doc/errata/staging/2014-09-02-univention-directory-manager-modules.yaml
+++ b/doc/errata/staging/2014-09-02-univention-directory-manager-modules.yaml
@@ -2,9 +2,11 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-3
 src: univention-directory-manager-modules
-fix: 9.0.76-26.1228.201409020917
+fix: 9.0.76-28.1232.201409021338
 version: [2,3]
 desc: |
   * The modification of the alternative mail address is now allowed in
     AD member mode.
-bug: [35672]
+  * The syntax for group names has been adapted. The default group names
+    of a French Active Directory are allowed now.
+bug: [35672,35521]
