--- a/test/ucs-ec2-tools/examples/jenkins/autotest-071-update-3.2-to-4.0-master-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-071-update-3.2-to-4.0-master-s4.cfg
@@ -16,7 +16,7 @@ ec2_security_group: sg-4170962e
 ec2_keypair: tech
 ec2_keypair_file: ~/ec2/keys/tech.pem
 
-# Default intance type 
+# Default intance type
 #	t1.micro m1.small m1.large m1.xlarge c1.medium
 #	c1.xlarge 	m2.xlarge m2.2xlarge m2.4xlarge cc1.4xlarge
 ec2_instance_type: m1.medium
@@ -47,14 +47,14 @@ command2:
  . utils.sh; upgrade_to_latest_errata
  . utils.sh; run_setup_join
 command3:
- # Update to UCS 4.0
+# Upgrade to UCS 4.0
  . utils.sh; upgrade_to_testing
  . utils.sh; run_join_scripts
 command4:
  . utils.sh; install_ucs_test
  reboot
  LOCAL sleep 60
- . utils.sh; wait_for_reboot()
+ . utils.sh; wait_for_reboot
 command5:
  . utils.sh; run_test
  LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master071_IP]:ucs-test.log .
