--- a/test/ucs-ec2-tools/examples/jenkins/autotest-093-backup-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-093-backup-s4.cfg
@@ -16,7 +16,7 @@ ec2_security_group: sg-4170962e
 ec2_keypair: tech
 ec2_keypair_file: ~/ec2/keys/tech.pem
 
-# Default intance type 
+# Default intance type
 #	t1.micro m1.small m1.large m1.xlarge c1.medium
 #	c1.xlarge 	m2.xlarge m2.2xlarge m2.4xlarge cc1.4xlarge
 ec2_instance_type: m1.medium
@@ -86,7 +86,7 @@ command1:
 command2:
 # Upgrade to UCS 4.0
  . utils.sh; upgrade_to_testing
-# utils.sh; upgrade_to_latest_test_errata
+# . utils.sh; upgrade_to_latest_test_errata
 command3:
  . utils.sh; run_setup_join_on_non_master
  ucr set samba/debug/level=4
@@ -109,4 +109,3 @@ files:
 # ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
  ~/ec2/license/license.secret /etc/
-
