--- a/test/ucs-ec2-tools/examples/jenkins/autotest-111-update-3.2-to-4.0-appupdate-master-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-111-update-3.2-to-4.0-appupdate-master-s4.cfg
@@ -16,7 +16,7 @@ ec2_security_group: sg-4170962e
 ec2_keypair: tech
 ec2_keypair_file: ~/ec2/keys/tech.pem
 
-# Default intance type 
+# Default intance type
 #	t1.micro m1.small m1.large m1.xlarge c1.medium
 #	c1.xlarge 	m2.xlarge m2.2xlarge m2.4xlarge cc1.4xlarge
 ec2_instance_type: m1.medium
@@ -59,7 +59,7 @@ command5:
  . utils.sh; install_apps_master_packages APP_ID
  . utils.sh; run_join_scripts
 command6:
- . utils.sh; install_apps_test_packages
+ . utils.sh; install_apps_test_packages APP_ID
 command7:
  . utils.sh; run_apptests
  LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master111_IP]:ucs-test.log .
@@ -71,5 +71,5 @@ command8:
  halt -p
 files:
  ~/ec2/license/autotest111.ldif /root/
- #~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
+# ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
