--- a/test/ucs-ec2-tools/examples/jenkins/autotest-114-update-3.2-to-4.0-appupdate-slave-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-114-update-3.2-to-4.0-appupdate-slave-s3.cfg
@@ -43,7 +43,7 @@ profile:
 command1:
  . utils.sh; basic_setup
 command2:
- . utils.sh; upgrade_to_latest_errata
+ . utils.sh; upgrade_to_latest
  . utils.sh; run_setup_join
 command3:
  univention-license-import /root/autotest114.ldif
@@ -83,7 +83,7 @@ profile:
 command1:
  . utils.sh; basic_setup
 command2:
- . utils.sh; upgrade_to_latest_errata
+ . utils.sh; upgrade_to_latest
 command3:
  . utils.sh; run_setup_join_on_non_master
 command4:
