Bug #35733 EC2: Fix reboot for broken pre-UCS-4.0-interim1 EC2 images
Undo insserv re-ordering breaking reboot.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53254 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-076-update-3.2-to-4.0-member-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-076-update-3.2-to-4.0-member-s3.cfg
@@ -53,9 +53,9 @@ command4:
  . utils.sh; upgrade_to_testing
  . utils.sh; run_join_scripts
 command5:
- reboot
+ . utils.sh && do_reboot
  LOCAL sleep 60
- . utils.sh; wait_for_reboot
+ . utils.sh && wait_for_reboot
 command6:
  # None
 command7:
@@ -86,9 +86,9 @@ command4:
  . utils.sh; run_join_scripts
 command5:
  . utils.sh; install_ucs_test
- reboot
+ . utils.sh && do_reboot
  LOCAL sleep 60
- . utils.sh; wait_for_reboot
+ . utils.sh && wait_for_reboot
 command6:
  . utils.sh; run_tests
  LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[member076_IP]:ucs-test.log .
