--- a/test/ucs-ec2-tools/examples/jenkins/autotest-070-update-3.2-to-4.0-master-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-070-update-3.2-to-4.0-master-s3.cfg
@@ -52,9 +52,9 @@ command3:
  . utils.sh; run_join_scripts
 command4:
  . utils.sh; install_ucs_test
- reboot
+ . utils.sh && do_reboot
  LOCAL sleep 60
- . utils.sh; wait_for_reboot
+ . utils.sh && wait_for_reboot
 command5:
  . utils.sh; run_tests
  LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master070_IP]:ucs-test.log .
