--- a/test/ucs-ec2-tools/examples/jenkins/autotest-090-master-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-090-master-s3.cfg
@@ -53,10 +53,9 @@ command2:
 command3:
  univention-license-import /root/autotest090.ldif
  . utils.sh; install_ucs_test
- # reboot failed (Bug 35733)
- # reboot
- #LOCAL sleep 60
- #. utils.sh; wait_for_reboot
+ . utils.sh && do_reboot
+ LOCAL sleep 60
+ . utils.sh && wait_for_reboot
 command4:
  . utils.sh; run_tests
  LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master090_IP]:ucs-test.log .
