--- a/test/ucs-ec2-tools/examples/jenkins/autotest-095-slave-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-095-slave-s4.cfg
@@ -54,10 +54,9 @@ command2:
 command3:
  univention-license-import /root/autotest095.ldif
 command4:
- # reboot failed (Bug 35733)
- # reboot
- #LOCAL sleep 60
- #. utils.sh; wait_for_reboot
+ . utils.sh && do_reboot
+ LOCAL sleep 60
+ . utils.sh && wait_for_reboot
 command5:
  # None
 command6:
@@ -92,10 +91,9 @@ command3:
  ucr set samba/debug/level=4
 command4:
  . utils.sh; install_ucs_test
- # reboot failed (Bug 35733)
- # reboot
- #LOCAL sleep 60
- #. utils.sh; wait_for_reboot
+ . utils.sh && do_reboot
+ LOCAL sleep 60
+ . utils.sh && wait_for_reboot
 command5:
  . utils.sh; run_tests
  LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave095_IP]:ucs-test.log .
