--- a/test/ucs-ec2-tools/examples/jenkins/autotest-203-ucsschool-multiserver-s4-only-master.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-203-ucsschool-multiserver-s4-only-master.cfg
@@ -45,9 +45,9 @@ command1:
 command2:
  . utils.sh; upgrade_to_latest_errata
  . utils.sh; run_setup_join
- reboot
+ . utils.sh && do_reboot
  LOCAL sleep 120
- . utils.sh; wait_for_reboot
+ . utils.sh && wait_for_reboot
 command3:
  univention-license-import /root/autotest203.ldif
 command4:
