--- a/test/ucs-ec2-tools/examples/jenkins/autotest-204-ucsschool-multiserver-s4-school-only-with-memberserver.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-204-ucsschool-multiserver-s4-school-only-with-memberserver.cfg
@@ -45,9 +45,9 @@ command1:
 command2:
  . utils.sh; upgrade_to_latest_errata
  . utils.sh; run_setup_join
- reboot
+ . utils.sh && do_reboot
  LOCAL sleep 120
- . utils.sh; wait_for_reboot
+ . utils.sh && wait_for_reboot
 command3:
  univention-license-import /root/autotest204.ldif
 command4:
@@ -87,9 +87,9 @@ command2:
  . utils.sh; upgrade_to_latest_errata
 command3:
  . utils.sh; run_setup_join_on_non_master
- reboot
+ . utils.sh && do_reboot
  LOCAL sleep 120
- . utils.sh; wait_for_reboot
+ . utils.sh && wait_for_reboot
 command4:
  . utils.sh; switch_to_test_app_center
  . utils.sh; install_apps ucsschool
@@ -133,7 +133,7 @@ command6:
  # None
 command7:
  . utils.sh; run_setup_join_on_non_master
- reboot
+ . utils.sh && do_reboot
  LOCAL sleep 120
  . utils.sh; switch_to_test_app_center
  . utils.sh; install_apps ucsschool
