--- a/test/ucs-ec2-tools/examples/jenkins/autotest-204-ucsschool-multiserver-s4-school-only.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-204-ucsschool-multiserver-s4-school-only.cfg
@@ -45,9 +45,9 @@ command1:
 command2:
  . utils.sh; upgrade_to_latest_errata
  . utils.sh; run_setup_join
- reboot
+ . utils.sh && do_reboot
  LOCAL sleep 120
- . utils.sh; wait_for_reboot
+ . utils.sh && wait_for_reboot
 command3:
  univention-license-import /root/autotest204.ldif
 command4:
@@ -86,9 +86,9 @@ command2:
  . utils.sh; upgrade_to_latest_errata
 command3:
  . utils.sh; run_setup_join_on_non_master
- reboot
+ . utils.sh && do_reboot
  LOCAL sleep 120
- . utils.sh; wait_for_reboot
+ . utils.sh && wait_for_reboot
 command4:
  . utils.sh; switch_to_test_app_center
  . utils.sh; install_apps ucsschool
@@ -124,9 +124,9 @@ command2:
  . utils.sh; upgrade_to_latest_errata
 command3:
  . utils.sh; run_setup_join_on_non_master
- reboot
+ . utils.sh && do_reboot
  LOCAL sleep 120
- . utils.sh; wait_for_reboot
+ . utils.sh && wait_for_reboot
 command4:
  . utils.sh; switch_to_test_app_center
  . utils.sh; install_apps ucsschool
