--- a/test/ucs-ec2-tools/examples/jenkins/autotest-207-ucsschool-update-3.1-to-3.2-multiserver-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-207-ucsschool-update-3.1-to-3.2-multiserver-s3.cfg
@@ -56,9 +56,9 @@ command5:
 command6:
  . utils.sh; upgrade_to_testing
  . utils.sh; run_join_scripts
- reboot
+ . utils.sh && do_reboot
  LOCAL sleep 120
- . utils.sh; wait_for_reboot
+ . utils.sh && wait_for_reboot
 command7:
  #
 command8:
@@ -97,9 +97,9 @@ command5:
 command6:
  . utils.sh; upgrade_to_testing
  . utils.sh; run_join_scripts
- reboot
+ . utils.sh && do_reboot
  LOCAL sleep 120
- . utils.sh; wait_for_reboot
+ . utils.sh && wait_for_reboot
 command7:
  # None
 command8:
@@ -138,9 +138,9 @@ command5:
 command6:
  . utils.sh; upgrade_to_testing
  . utils.sh; run_join_scripts
- reboot
+ . utils.sh && do_reboot
  LOCAL sleep 120
- . utils.sh; wait_for_reboot
+ . utils.sh && wait_for_reboot
 command7:
  . utils.sh; install_ucs_test
  . utils.sh; install_apps_test_packages ucsschool
