--- a/test/ucs-ec2-tools/examples/jenkins/ucsschool-performance-30000.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/ucsschool-performance-30000.cfg
@@ -49,9 +49,9 @@ command2:
  resize2fs /dev/xvda1
  . utils.sh; upgrade_to_latest_errata
  . utils.sh; run_setup_join
- reboot
+ . utils.sh && do_reboot
  LOCAL sleep 120
- . utils.sh; wait_for_reboot
+ . utils.sh && wait_for_reboot
 command3:
  univention-license-import /root/school30000.ldif
 command4:
@@ -108,10 +108,10 @@ command2:
  . utils.sh; upgrade_to_latest_errata
 command3:
  . utils.sh; run_setup_join_on_non_master
- reboot
+ . utils.sh && do_reboot
  LOCAL sleep 120
  #wait for the reboot
- . utils.sh; wait_for_reboot
+ . utils.sh && wait_for_reboot
 command4:
  # Switch to Test App Center
  . utils.sh; switch_to_test_app_center
