--- a/test/ucs-ec2-tools/examples/jenkins/ucsschool-performance-500.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/ucsschool-performance-500.cfg
@@ -45,9 +45,9 @@ command1:
 command2:
  . utils.sh; upgrade_to_latest_errata
  . utils.sh; run_setup_join
- reboot
+ . utils.sh && do_reboot
  LOCAL sleep 120
- . utils.sh; wait_for_reboot
+ . utils.sh && wait_for_reboot
 command3:
  univention-license-import /root/school500.ldif
 command4:
@@ -92,9 +92,9 @@ command2:
  . utils.sh; upgrade_to_latest_errata
 command3:
  . utils.sh; run_setup_join_on_non_master
- reboot
+ . utils.sh && do_reboot
  LOCAL sleep 120
- . utils.sh; wait_for_reboot
+ . utils.sh && wait_for_reboot
 command4:
  . utils.sh; switch_to_test_app_center
  LOCAL ssh -i ~/ec2/keys/tech.pem -t -t -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[backup31_IP] 'for app in ucsschool; do univention-add-app -a --latest $app </dev/null; done'
