Bug #35580: added YAML entry
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53266 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-08-26-univention-management-console-module-udm.yaml
+++ b/doc/errata/staging/2014-08-26-univention-management-console-module-udm.yaml
@@ -2,10 +2,11 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-3
 src: univention-management-console-module-udm
-fix: 4.0.99-3.472.201408261757
+fix: 4.0.99-4.473.201409021724
 version: [3]
 desc: |
   This update fixes the following issue:
-  * failures on report creation can not block UMC usage anymore
-bug: [34333]
+  * Failures on report creation can not block UMC usage anymore
+  * Long base DNs in license files are now handled correctly
+bug: [34333,35580]
 
