--- a/doc/errata/staging/2014-08-28-univention-system-setup.yaml
+++ b/doc/errata/staging/2014-08-28-univention-system-setup.yaml
@@ -2,7 +2,7 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-3
 src: univention-system-setup
-fix: 7.0.69-55.663.201409030959
+fix: 7.0.69-56.665.201409031806
 version: [3]
 desc: |
   This update fixes the following issues:
@@ -15,4 +15,6 @@ desc: |
   * If an email address is given during the system setup
     the startup wizard won't ask for an activation address.
     This prevents a possible double registration.
-bug: [35587,35721,35605,35711]
+  * The Windows NETBIOS domain name can now be up to
+    15 characters long.
+bug: [35587,35721,35605,35711,35599]
