--- a/doc/errata/staging/2014-09-03-univention-s4-connector.yaml
+++ b/doc/errata/staging/2014-09-03-univention-s4-connector.yaml
@@ -2,7 +2,7 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-3
 src: univention-s4-connector
-fix: 8.0.33-77.513.201409040824
+fix: 8.0.33-78.515.201409041028
 version: [2,3]
 desc: |
  * A locking table has been added to the S4 connector which is used to
@@ -10,4 +10,6 @@ desc: |
  * A synchronization error for the telephone number has been fixed.
  * The inital group membership sync has been fixed if the group exists
    on both sides and the group members are different.
-bug: [35391,31172,33319]
+ * Objects which are deleted in Samba 4 are now recursively removed in
+   OpenLDAP.
+bug: [35391,31172,33319,27290]
