--- a/doc/errata/staging/2014-09-03-univention-s4-connector.yaml
+++ b/doc/errata/staging/2014-09-03-univention-s4-connector.yaml
@@ -2,7 +2,7 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-3
 src: univention-s4-connector
-fix: 8.0.33-78.515.201409041028
+fix: 8.0.33-79.517.201409041312
 version: [2,3]
 desc: |
  * A locking table has been added to the S4 connector which is used to
@@ -12,4 +12,6 @@ desc: |
    on both sides and the group members are different.
  * Objects which are deleted in Samba 4 are now recursively removed in
    OpenLDAP.
-bug: [35391,31172,33319,27290]
+ * The sync_mode is now also check in the post modify membership update 
+   functions .
+bug: [35391,31172,33319,27290,35251]
