--- a/doc/errata/staging/2014-08-28-univention-system-setup.yaml
+++ b/doc/errata/staging/2014-08-28-univention-system-setup.yaml
@@ -2,7 +2,7 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-3
 src: univention-system-setup
-fix: 7.0.69-56.665.201409031806
+fix: 7.0.69-57.667.201409041323
 version: [3]
 desc: |
   This update fixes the following issues:
@@ -17,4 +17,6 @@ desc: |
     This prevents a possible double registration.
   * The Windows NETBIOS domain name can now be up to
     15 characters long.
-bug: [35587,35721,35605,35711,35599]
+  * fix reloading of settings and displaying of messages
+    after saving settings in basic settings module
+bug: [35587,35721,35605,35711,35599,35815]
