Bug #35664 test: Fix python-apt API change
> Traceback (most recent call last):
>   File "/usr/sbin/ucs-test", line 167, in <module>
>     main()
>   File "/usr/sbin/ucs-test", line 163, in main
>     test_set.run_tests(options.filter, options.dry)
>   File "/usr/sbin/ucs-test", line 110, in run_tests
>     check = test_result.check()
>   File "/usr/lib/pymodules/python2.7/univention/testing/data.py", line 739, in check
>     conditions = self.case.check(self.environment)
>   File "/usr/lib/pymodules/python2.7/univention/testing/data.py", line 551, in check
>     conditions += list(self.packages.check(environment))
>   File "/usr/lib/pymodules/python2.7/univention/testing/data.py", line 433, in check
>     conditions = list(check_disjunction(conjunction))
>   File "/usr/lib/pymodules/python2.7/univention/testing/data.py", line 422, in check_disjunction
>     apt.apt_pkg.CheckDep(ver.version, dep_op, dep_version):
> AttributeError: 'module' object has no attribute 'CheckDep'

apt.apt_pkg.[CheckDep -> check_dep]

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53373 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/control
+++ b/test/ucs-test/debian/control
@@ -27,6 +27,7 @@ Architecture: all
 Depends: univention-config,
  python,
  python-yaml,
+ python-apt (>= 0.8),
  python-argparse,
  ucs-test-modules-all | ucs-test-module,
  dpkg-dev,
