Bug #35637 base: install univention-archive-key by default
Otherwise installing new packages during d-i print the warning.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53378 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-base-files/debian/control
+++ b/base/univention-base-files/debian/control
@@ -12,6 +12,7 @@ Package: univention-base-packages
 Architecture: all
 Depends: ${misc:Depends},
  univention-base-files (= ${source:Version}),
+ univention-archive-key,
  python-ipaddr,
  rsyslog,
  bash-completion,
