--- a/doc/errata/staging/2014-08-12-univention-management-console-module-adtakeover.yaml
+++ b/doc/errata/staging/2014-08-12-univention-management-console-module-adtakeover.yaml
@@ -2,11 +2,11 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-3
 src: univention-management-console-module-adtakeover
-fix: 1.0.10-50.50.201409021802
+fix: 1.0.10-51.52.201409041547
 version: [2,3]
 desc: |
     * When running AD takeover out of AD member mode its necessary to flush samba caches
       to steer clear of IDMAP issues.
     * If the spelling case of the domain name differs between AD and UCS the GPO check failed.
-      This has been fixed now by creating the symbolic link in the sysvol share.
+      This get's fixed now by renaming the domain specific directory in the sysvol share.
 bug: [35564,35769]
