--- a/doc/errata/staging/2014-09-04-univention-kernel-image.yaml
+++ b/doc/errata/staging/2014-09-04-univention-kernel-image.yaml
@@ -3,7 +3,7 @@ release: "3.2"
 version: [1, 2, 3]
 scope: ucs_3.2-0-errata3.2-3
 src: univention-kernel-image
-fix: 7.0.0-15.5_.20140904____
+fix: 7.0.0-15.58.201409051009
 desc: |
  This update fixes two virtualization problems:
  * an overflow in the KVM time handling code prevented the start of a VM.
