* WIP: Integration of cloud instance management with libcloud (Bug #32842) - Read and add connections from ldap - Improve query behavior - Implement update_expensive - Cache connections locally
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53407 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-daemon/debian/control
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/control
@@ -38,7 +38,7 @@ Depends: ${misc:Depends}, ${python:Depends},
  python-openssl,
  python-pam,
  python-univention-directory-manager (>> 6.0.103),
- python-libcloud
+ python-libcloud (>= 0.15.1)
 Provides: ${python:Provides}
 Description: UCS Virtual Machine Manager Daemon - Python bindings
  This package contains the UCS Virtual Machine Manager Daemon
