Bug #34090 fixed YAML
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53414 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-08-28-univention-system-setup.yaml
+++ b/doc/errata/staging/2014-08-28-univention-system-setup.yaml
@@ -2,7 +2,7 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-3
 src: univention-system-setup
-fix: 7.0.69-57.667.201409041323
+fix: 7.0.69-58.669.201409080931
 version: [2,3]
 desc: |
   This update fixes the following issues:
@@ -17,4 +17,6 @@ desc: |
   * The Windows NETBIOS domain name can now be up to 15 characters long.
   * Problems with reloading values and displaying messages after saving changes
     have been corrected.
-bug: [35587,35721,35605,35711,35599,35815]
+  * The UMC now warns the user if DHCP is selected but a link-local IP address is used.
+    This can occur if DHCP is preconfigured but no DHCP lease could be obtained.
+bug: [34090,35587,35721,35605,35711,35599,35815]
