--- a/doc/errata/staging/2014-09-04-samba.yaml
+++ b/doc/errata/staging/2014-09-04-samba.yaml
@@ -7,4 +7,6 @@ version: [3]
 desc: |
  * When installing broken printdrivers, samba returned a wrong
    error code. This has been fixed.
-bug: [32771]
+ * A bug has been fixed which could prevent a takeover of Windows 2012 servers with
+   enabled recycle bin.
+bug: [32771,35443]
