--- a/doc/errata/staging/2014-08-26-univention-management-console-module-udm.yaml
+++ b/doc/errata/staging/2014-08-26-univention-management-console-module-udm.yaml
@@ -2,11 +2,13 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-3
 src: univention-management-console-module-udm
-fix: 4.0.99-4.473.201409021724
+fix: 4.0.99-5.475.201409081539
 version: [3]
 desc: |
   This update fixes the following issue:
   * Failures on report creation can not block UMC usage anymore
   * Long base DNs in license files are now handled correctly
-bug: [34333,35580]
+  * A possible double registration is now prevented by a new ucr
+    variable.
+bug: [34333,35580,35711]
 
