--- a/doc/errata/staging/2014-09-04-samba.yaml
+++ b/doc/errata/staging/2014-09-04-samba.yaml
@@ -5,8 +5,8 @@ src: samba
 fix: 2:4.1.0-1.681.201409041406
 version: [3]
 desc: |
- * When installing broken printdrivers, samba returned a wrong
-   error code. This has been fixed.
+ * When installing broken printdrivers, samba returned a wrong error code
+   (access denied).  This has been fixed.
  * A bug has been fixed which could prevent a takeover of Windows 2012 servers with
    enabled recycle bin.
 bug: [32771,35443]
