YAML update Bug #35251
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53465 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-09-03-univention-s4-connector.yaml
+++ b/doc/errata/staging/2014-09-03-univention-s4-connector.yaml
@@ -12,8 +12,8 @@ desc: |
    on both sides and the group members are different.
  * Objects which are deleted in Samba 4 are now recursively removed in
    OpenLDAP.
- * The sync_mode is now also check in the post modify membership update 
-   functions .
+ * The sync_mode is now being checked in the post modify membership update 
+   functions.
  * The S4 connector doesn't no longer delete the OpenLDA domain
    controller object if the deleted Samba 4 object was a Windows
    computer.
