--- a/doc/errata/staging/2014-09-02-univention-directory-manager-modules.yaml
+++ b/doc/errata/staging/2014-09-02-univention-directory-manager-modules.yaml
@@ -12,5 +12,5 @@ desc: |
   * A traceback has been fixed if more than one colon is set in the 
     automountInformation attribute.
   * The setting of the Kerberos principal name for computer/macos
-    objects has been fixed.
+    objects have been fixed.
 bug: [35672,35521,34541,35526]
