--- a/doc/errata/staging/2014-09-08-univention-printserver.yaml
+++ b/doc/errata/staging/2014-09-08-univention-printserver.yaml
@@ -2,7 +2,7 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-3
 src: univention-printserver
-fix: 7.0.11-2.640.201409041745
+fix: 7.0.11-3.642.201409091506
 version: [2,3]
 desc: |
     * Assigning a Windows printer driver to a Samba print share renamed the
@@ -11,8 +11,9 @@ desc: |
       would fail in this case. Now the UCS management tools create Samba
       printer shares with the option "force printername" which is provided by
       Samba as a workaround for this issue. The option get's set while
-      creating new or modifying existing printer shares. The following
-      command can be run once on each UCS print server to set the option
-      for all print shares hosted locally:
+      creating new or modifying existing printer shares. The new default
+      can be reverted by settings the UCR variable samba/force_printername to
+      no or false. The following command can be run once on each UCS print
+      server to set the option for all print shares hosted locally:
       univention-directory-listener-ctrl resync cups-printers
 bug: [33505]
