Bug #31319: fixed typo
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53516 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-08-28-univention-lib.yaml
+++ b/doc/errata/staging/2014-08-28-univention-lib.yaml
@@ -9,5 +9,5 @@ desc: |
     while installing Apps, which lead to the installation getting stuck.
   * The AD member setup does now ignore the spelling of the domain name.
   * The python module atjobs is now EINTR-safe, i.e., for interrupted function
-    call signals
+    call signals.
 bug: [35729,35757,31319]
