--- a/services/univention-samba/debian/control
+++ b/services/univention-samba/debian/control
@@ -6,6 +6,7 @@ Build-Depends: debhelper (>> 7),
  univention-config-dev,
  ucslint-univention
 Standards-Version: 3.5.2
+XS-Python-Version: 2.6, 2.7
 
 Package: univention-samba
 Architecture: all
