reformat advisory (Bug #34090, #35587, #35721, #35605, #35599, #35815)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53568 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-08-28-univention-system-setup.yaml
+++ b/doc/errata/staging/2014-08-28-univention-system-setup.yaml
@@ -14,6 +14,7 @@ desc: |
   * The Windows NETBIOS domain name can now be up to 15 characters long.
   * Problems with reloading values and displaying messages after saving changes
     have been corrected.
-  * The UMC now warns the user if DHCP is selected but a link-local IP address is used.
+  * The UMC now warns the user if DHCP is selected but a link-local IP address
+    is used.
     This can occur if DHCP is preconfigured but no DHCP lease could be obtained.
 bug: [34090,35587,35721,35605,35599,35815]
