reformat advisory (Bug #32771, #35443)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53577 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-09-04-samba.yaml
+++ b/doc/errata/staging/2014-09-04-samba.yaml
@@ -7,6 +7,6 @@ version: [3]
 desc: |
  * When installing broken printdrivers, samba returned a wrong error code
    (access denied).  This has been fixed.
- * A bug has been fixed which could prevent a takeover of Windows 2012 servers with
-   enabled recycle bin.
+ * A bug has been fixed which could prevent a takeover of Windows 2012 servers
+   with enabled recycle bin.
 bug: [32771,35443]
